fix header on mobile view

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -9,6 +9,16 @@
 @import 'header'
 @import 'mySkillsSlider'
 
+::-webkit-scrollbar
+    width: 20px
+
+::-webkit-scrollbar-track
+    background: rgba(255,255,255,0)
+
+::-webkit-scrollbar-thumb
+    background: -webkit-linear-gradient(90deg, #fe7f4a, #fe6b3f, #7c0032, #530030, #2d102c)
+    border-radius: 10px
+
 .yellow
     color: #f0db4f
 
